# poisson-bench-rs

./: .gitignore  Cargo.toml  README.md  bench_poisson.py  bench_poisson_rust.py  pyproject.toml  pyvenv.cfg
fish-rs/: Cargo.toml
fish-rs/src/: main.rs
src/: lib.rs
