[package]
name = "fish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fish"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
rand = "0.8.4"
rand_distr = "0.4.3"
rayon = "1.5"
numpy = "0.17.2"
